# life-os-public

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  next.config.js  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vitest.config.ts
prisma/: schema.prisma  seed.ts
prisma/migrations/20260515120350_init/: migration.sql
prisma/migrations/20260602065450_redesign_v2/: migration.sql
prisma/migrations/20260602152543_areas_goal_deps_drop_notion/: migration.sql
prisma/migrations/20260602161133_area_tasks/: migration.sql
scripts/: seed-demo.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: lib.rs
src/app/: globals.css  layout.tsx  page.tsx
src/app/pursuits-v2/: page.tsx
src/components/: GlobalOverlays.tsx
src/lib/: chime.ts  formatTime.ts  habitDocs.ts  habitLevels.ts  lifeHabits.ts  meditation.ts  pursuitsDerived.ts  routineChecklist.ts  utils.ts  vowShell.ts
src/server/: context.ts  trpc.ts
src/stores/: breakStore.ts  goalStore.ts  launchStore.ts  pomodoroStore.ts  pursuitsStore.ts  taskStore.ts  uiStore.ts  vowStore.ts  warmupStore.ts
src/styles/: tokens.css
tests/e2e/: cleanup-vow-e2e.js  pursuits.spec.ts  smoke.spec.ts  vow.spec.ts
tests/unit/: goal-progress.test.ts  goal-router.test.ts  habit-levels.test.ts  life-habits.test.ts  pomodoro-router.test.ts  prompt-router.test.ts  prompts.test.ts  pursuits-derived.test.ts  routine-checklist.test.ts  task-router.test.ts  up-next-router.test.ts  vow-router.test.ts
(+147 files in other folders)
