[package]
name = "life-os"
version = "0.1.0"
description = "Life OS — local-first life management dashboard"
authors = ["Richard Jach"]
edition = "2021"

[lib]
name = "life_os_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
which = "6"

[features]
custom-protocol = ["tauri/custom-protocol"]
